# nimbuscode

./: .gitignore  LICENSE  README.md  UPDATES.md  nimbuscode.py  requirements.txt
python/: README.md
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs
rust/tests/: lib_test.rs
src/: main.rs
tests/: test_nimbuscode.py
