[package]
name = "nimbuscode"
version = "0.1.0"
edition = "2021"
description = "A lightweight AI coding assistant using OpenRouter's free models"
authors = ["NimbusCode Contributors"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
regex = "1.9"
tokio = { version = "1.32", features = ["full"] }
pulldown-cmark = "0.9"
rpassword = "7.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
