[package]
name = "nimbuscode"
version = "0.1.0"
edition = "2021"
description = "A lightweight, portable AI coding assistant powered by OpenRouter's free models"
authors = ["Nael Mohammad <naelmohammad@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
configparser = "3.0"
textwrap = "0.16"
anyhow = "1.0"
